# nonebot-plugin-cardimg

./: LICENSE  README.md  pyproject.toml
nonebot_plugin_cardimg/: __init__.py  base.py  config.py  templates.py
nonebot_plugin_cardimg/templates/bili/: day.html  night.html
nonebot_plugin_cardimg/templates/help/: day.html  night.html
nonebot_plugin_cardimg/templates/minote/: template.html
nonebot_plugin_cardimg/templates/ncm_card/: template.html
nonebot_plugin_cardimg/templates/ncm_zhusha/: template.html
nonebot_plugin_cardimg/templates/simple/: template.html
nonebot_plugin_cardimg/templates/table/: day.html  night.html
